# black-box

./: .gitignore  Makefile  README.md  foo.txt  main.py  pylintrc  pyproject.toml  run.bat
.github/workflows/: alpha.yml  ci.yml
black_box/: app.py  black_box.py  flight_tracker.py
black_box/results/: results_writer.py
black_box/simulator/: black_box.py  flight.py
flight_tracker/: app.py  flight_tracker.py  main.py
flight_tracker/results/: results_writer.py
flight_tracker/simulator/: flight.py  flight_data.yml
flight_tracker/utils/: env.py  logger.py  results_writer.py
